tests/sksl/errors/ReservedNameSampler3DRect.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'sampler3DRect'
1 error
